force-app/main/default/objects/InquiryMail__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMethod__c</fullName>
        <label>連絡方法</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>問合せ内容</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>性別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InquiryCode__c</fullName>
        <label>問合せ番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InquiryDateTime__c</fullName>
        <label>問合せ日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InquiryFax__c</fullName>
        <label>FAX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InquiryMailAddress__c</fullName>
        <label>メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InquiryNameKana__c</fullName>
        <label>名前（カナ）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InquiryName__c</fullName>
        <label>名前</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InquiryPhone__c</fullName>
        <label>電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OriginalMessage__c</fullName>
        <label>オリジナルメッセージ</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>郵便番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredTime__c</fullName>
        <label>連絡時間</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>送信種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderMailAddress__c</fullName>
        <label>送信元メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProviderName__c</fullName>
        <label>送信者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderProductCode__c</fullName>
        <label>送信元管理番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderProductUrl__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SettingNameApi__c</fullName>
        <label>Mail2X設定名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>取込メール</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProviderName__c</columns>
        <columns>ProviderMailAddress__c</columns>
        <columns>Subject__c</columns>
        <columns>ProductType__c</columns>
        <columns>InquiryDateTime__c</columns>
        <columns>InquiryName__c</columns>
        <columns>InquiryMailAddress__c</columns>
        <columns>InquiryPhone__c</columns>
        <columns>ProviderProductUrl__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>mail-{00000000}</displayFormat>
        <label>メールID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>